- Remove extra bigThumbnail  - Small css fixe of spacing and font-size / letter space / font family

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/overview.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/overview.less
@@ -1,6 +1,7 @@
 .cruise-2018-overview {
   position: relative;
   min-height: 500px;
+  margin-top:25px;
 
   .cruise-2018-overview-big-pic picture {
     position: relative;
@@ -43,6 +44,10 @@
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px 14px 10px 14px;
     margin-left: 15px;
+    font-size: 13px;
+    line-height: 16px;
+    letter-spacing: 1px;
+    font-family: @suisse;
   }
 
   .cruise-2018-overview-description-cruise {
@@ -51,6 +56,7 @@
     color: @grey--3;
     font-family: @suisse;
     letter-spacing: 1px;
+    margin-top:20px;
   }
 
   .cruise-2018-overview-description-from-to {
@@ -180,7 +186,7 @@
 
   .cruise-2018-overview-quote-icons div, .cruise-2018-overview-quote-icons a {
     display: inline-block;
-    margin-right: 35px;
+    margin-right: 30px;
     cursor: pointer;
   }
 
@@ -251,6 +257,7 @@
 
 @media screen and (max-width: @screen-sm) {
   .cruise-2018-overview {
+    margin-top:0px;
     .cruise-2018-overview-big-pic picture {
       min-height: 200px;
     }
